--- a/world-map-final/index.html
+++ b/world-map-final/index.html
@@ -187,7 +187,7 @@
      />
   </a>
 
-  <a class="country" id="+4.0" data-toggle="popover" data-container="body" title="Austria" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+4.0" data-toggle="popover" data-container="body" title="Azerbaijan" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="AZ"
@@ -1132,7 +1132,7 @@
      />
   </a>
 
-  <a class="country" id="+8.0" data-toggle="popover" data-container="body" title="Malawi" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+8.0" data-toggle="popover" data-container="body" title="Malaysia" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="MY"
@@ -1342,7 +1342,7 @@
      />
   </a>
 
-  <a class="country" id="+2.0" data-toggle="popover" data-container="body" title="Qatar" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+2.0" data-toggle="popover" data-container="body" title="Romania" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="RO"
@@ -1470,7 +1470,7 @@
      />
   </a>
 
-  <a class="country" id="+1.0" data-toggle="popover" data-container="body" title="Slovakia" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+1.0" data-toggle="popover" data-container="body" title="Slovenia" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="SI"
@@ -1520,7 +1520,7 @@
      />
   </a>
 
-  <a class="country" id="0.0" data-toggle="popover" data-container="body" title="Chad" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="0.0" data-toggle="popover" data-container="body" title="Togo" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="TG"
@@ -1530,7 +1530,7 @@
      />
   </a>
 
-  <a class="country" id="+7.0" data-toggle="popover" data-container="body" title="Chad" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+7.0" data-toggle="popover" data-container="body" title="Thailand" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="TH"
@@ -1540,7 +1540,7 @@
      />
   </a>
 
-  <a class="country" id="+5.0" data-toggle="popover" data-container="body" title="Chad" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+5.0" data-toggle="popover" data-container="body" title="Tajikistan" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="TJ"
@@ -1620,7 +1620,7 @@
      />
   </a>
 
-  <a class="country" id="+2.0" data-toggle="popover" data-container="body" title="Uganda" data-content="Some content inside the popover" data-placement="top">
+  <a class="country" id="+2.0" data-toggle="popover" data-container="body" title="Ukraine" data-content="Some content inside the popover" data-placement="top">
   <path
      inkscape:connector-curvature="0"
      id="UA"
